# articles-aggregator

./: README.md
src/: env.example  main.py  pyproject.toml  run.sh
src/abstracts/: abstract_factory.py  abstract_uow.py  base_dto.py
src/docker/: Dockerfile
src/dto/: article_dto.py  auth_dto.py  token_dto.py  topic_dto.py  user_dto.py
src/migrations/: env.py
src/migrations/versions/: 2024_07_28_1610-1dcf601b4a6b_create_user_table.py  2024_07_28_1613-b97c1e7fd6df_create_article_topic_table.py  2024_07_28_1615-08fbce1e3022_fill_article_topic_table.py  2024_07_28_1636-f96927a48d66_create_article_table.py
src/repositories/: article_repository.py  token_repository.py  topic_repository.py  user_repository.py
src/repositories/models/: article_model.py  user_model.py
src/scheduler/: scheduler_jobs.py
src/services/: article_service.py  auth_service.py  user_service.py
src/tools/: app_config.py  consts.py  di_container.py  enums.py  jwt_helper.py  validators.py
src/tools/factories/: repository_factory.py  session_factory.py  uow_factory.py
src/uow/: alchemy_redis_uow_composite.py  alchemy_uow.py  redis_uow.py
src/web/fast_api/dependencies/: token_dependency.py
src/web/fast_api/entrypoints/: article_entrypoint.py  auth_entrypoint.py  user_entrypoint.py
src/web/graphql/: validation_rules.py
src/web/graphql/dependencies/: token_dependency.py
src/web/graphql/entrypoints/: article_entrypoint.py  auth_entrypoint.py  user_entrypoint.py
src/web/graphql/models/: article_models.py  auth_models.py  (+1 more)
src/web/tools/: router_registrator.py  token_validator.py
(+8 files in other folders)
